Fixed classes and form html

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -194,61 +194,75 @@
           containing information about game. We don’t spam.</p>
       </div>
       <form class="game_landing__container__newsletter__div__email_form">
-        <label for="email"><input type="text" id="email" placeholder="Your email address"></label>
+        <label for="email" class="game_landing__container__newsletter__div__email_label"><input type="text" id="email"
+            class="game_landing__container__newsletter__div__email_input" placeholder="Your email address"></label>
         <button class="game_landing__container__newsletter__div__subscribe_button">Subscribe now</button>
       </form>
     </article>
   </main>
   <footer class="game_landing__footer">
-    <a href="#" class="game_landing__footer__logo"><img src="./images/game_landing_logo.png" alt></a>
-    <ul class="game_landing__footer__list__about">
-      <li class="game_landing__footer__list__about__game"><a href="#">Main</a></li>
-      <li class="game_landing__footer__list__about__game"><a href="#">About</a></li>
-      <li class="game_landing__footer__list__about__game"><a href="#">Game features</a></li>
-      <li class="game_landing__footer__list__about__game"><a href="#">System requirements</a></li>
-      <li class="game_landing__footer__list__about__game"><a href="#">Quotes</a></li>
-    </ul>
-    <ul class="game_landing__footer__list__social">
-      <li class="game_landing__footer__list__social__link">
+    <header class="game_landing__footer__logo">
+      <a href="#" class="game_landing__footer__logo-link">Game landing logo</a>
+    </header>
+    <nav class="game_landing__footer__navigation">
+      <ul class="game_landing__footer__list__navigation__about">
+        <li class="game_landing__footer__list__navigation__about__game"><a href="#"
+            class="game_landing__footer__list__navigation__about__game_link">Main</a></li>
+        <li class="game_landing__footer__list__navigation__about__game"><a href="#"
+            class="game_landing__footer__list__navigation__about__game_link">About</a></li>
+        <li class="game_landing__footer__list__navigation__about__game"><a href="#"
+            class="game_landing__footer__list__navigation__about__game_link">Game features</a></li>
+      </ul>
+      <ul class="game_landing__footer__list__navigation__about">
+        <li class="game_landing__footer__list__navigation__about__game"><a href="#"
+            class="game_landing__footer__list__navigation__about__game_link">System requirements</a></li>
+        <li class="game_landing__footer__list__navigation__about__game"><a href="#"
+            class="game_landing__footer__list__navigation__about__game_link">Quotes</a></li>
+      </ul>
+    </nav>
+    <ul class="game_landing__footer__list__navigation__social">
+      <li class="game_landing__footer__list__navigation__social__link">
         <a href="#">
           <img src="./images/facebook.svg" alt>
         </a>
       </li>
-      <li class="game_landing__footer__list__social__link">
+      <li class="game_landing__footer__list__navigation__social__link">
         <a href="#">
           <img src="./images/twitter.svg" alt>
         </a>
       </li>
-      <li class="game_landing__footer__list__social__link">
+      <li class="game_landing__footer__list__navigation__social__link">
         <a href="#">
           <img src="./images/vector.svg" alt>
         </a>
       </li>
-      <li class="game_landing__footer__list__social__link">
+      <li class="game_landing__footer__list__navigation__social__link">
         <a href="#">
           <img src="./images/twitch.svg" alt>
         </a>
       </li>
     </ul>
-    <ul class="game_landing__footer__list__license">
-      <li class="game_landing__footer__list__license__copyright">
+
+    <ul class="game_landing__footer__list__navigation__license">
+      <li class="game_landing__footer__list__navigation__license__copyright">
         © 2018 Outpost Games, Inc. All Rights Reserved
       </li>
-      <li class="game_landing__footer__list__license__link">
+      <li class="game_landing__footer__list__navigation__license__link">
         <a href="#">
           Privicy policy
         </a></li>
-      <li class="game_landing__footer__list__license__link">
+      <li class="game_landing__footer__list__navigation__license__link">
         <a href="#">
           Terms of services
         </a>
       </li>
-      <li class="game_landing__footer__list__license__link">
+      <li class="game_landing__footer__list__navigation__license__link">
         <a href="#">
           Code of conduct
         </a>
       </li>
     </ul>
+
   </footer>
 </body>
 
