--- a/webroot/index.html
+++ b/webroot/index.html
@@ -25,8 +25,18 @@
         <span class="a11y">Open menu</span>
       </label>
     </form>
+    <div class="game_landing__header__navigation__union">
+      <ul class="game_landing__header__navigation__union__ul">
+        <li class="game_landing__header__navigation__union__ul__list"><a href="#"
+            class="game_landing__header__navigation__union__ul__list_link"><img src="./images/yellow-logo.svg" alt
+              class="game_landing__header__navigation__union__ul__list_image"></a></li>
+        <li class="game_landing__header__navigation__union__ul__list"><a href="#"
+            class="game_landing__header__navigation__union__ul__list_link"><img src="./images/union-logo.svg" alt
+              class="game_landing__header__navigation__union__ul__list_image"></a></li>
+      </ul>
+    </div>
     <nav class="game_landing__header__menu">
-      <ul class="game_landing__header__menu__">
+      <ul class="game_landing__header__menu__ul_list">
         <li class="game_landing__header__menu__lists"><a href="#"
             class="game_landing__header__menu__lists__links">Main</a></li>
         <li class="game_landing__header__menu__lists"><a href="#"
@@ -69,11 +79,11 @@
         life an death</p>
       <ul class="game_landing__container__gallery__lists">
         <li class="game_landing__container__gallery__lists_1"><img class="game_landing__container__gallery__lists_image"
-            src="./images/image-5.png" alt>
+            src="./images/monument.png" alt>
         <li class="game_landing__container__gallery__lists_2"><img class="game_landing__container__gallery__lists_image"
-            src="./images/screenshot-2.png" alt>
+            src="./images/monument-2.png" alt>
         <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__list_image"
-            src="./images/screenshot-3.png" alt>
+            src="./images/monument-3.png" alt>
       </ul>
     </article>
     <article class="game_landing__container__features">
@@ -89,10 +99,21 @@
             one of three spots on the rescue chopper.</p>
         </div>
         <div class="game_landing__container__features__description">
-          <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
+          <details>
+            <summary>
+              <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
+            </summary>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio et laborum, accusamus enim, non pariatur quo debitis error in tempora, quia asperiores officia eos dolorem perferendis illo vel doloremque amet?</p>
+          </details>
         </div>
         <div class="game_landing__container__features__description">
-          <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
+          <details>
+            <summary>
+              <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
+            </summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta magnam reiciendis neque. Quisquam
+              placeat tempora illum autem,</p>
+          </details>
         </div>
       </div>
     </article>
@@ -222,22 +243,25 @@
     </nav>
     <ul class="game_landing__footer__list__navigation__social">
       <li class="game_landing__footer__list__navigation__social__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__list__navigation__social__link_facebook">
           <img src="./images/facebook.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__navigation__social__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__list__navigation__social__link_twitter">
           <img src="./images/twitter.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__navigation__social__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__list__navigation__social__link_vector">
           <img src="./images/vector.svg" alt>
+        </a>
+        <a href="#" class="game_landing__footer__list__navigation__social__link_curcor">
+          <img src="./images/cursor.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__navigation__social__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__list__navigation__social__link_twitch">
           <img src="./images/twitch.svg" alt>
         </a>
       </li>
@@ -248,16 +272,16 @@
         © 2018 Outpost Games, Inc. All Rights Reserved
       </li>
       <li class="game_landing__footer__list__navigation__license__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__navigation__licence__link">
           Privicy policy
         </a></li>
       <li class="game_landing__footer__list__navigation__license__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__navigation__licence__link">
           Terms of services
         </a>
       </li>
       <li class="game_landing__footer__list__navigation__license__link">
-        <a href="#">
+        <a href="#" class="game_landing__footer__navigation__licence__link">
           Code of conduct
         </a>
       </li>
