Fixed classes and html layout

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="game_landing__header__store__story">
       <a href="#" class="game_landing__header__store__story_scroll">The story</a>
-      <a href="#"><img src="../webroot/images/banners.svg" alt=""></a>
+      <a href="#" class="game_landing__header__store__progress"><img src="../webroot/images/banners.svg" alt=""></a>
     </div>
   </header>
 
@@ -93,17 +93,24 @@
           <h4 class="game_landing__container__features__big_title">Features</h4>
         </header>
         <div class="game_landing__container__features__description">
-          <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
-          <p class="game_landing__container__features__description_text">You have 30 minutes to find a relic, signal for
-            extraction, and grab
-            one of three spots on the rescue chopper.</p>
+          <details>
+            <summary>
+              <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
+            </summary>
+            <p class="game_landing__container__features__description_text">You have 30 minutes to find a relic, signal
+              for
+              extraction, and grab
+              one of three spots on the rescue chopper.</p>
+          </details>
         </div>
         <div class="game_landing__container__features__description">
           <details>
             <summary>
               <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
             </summary>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio et laborum, accusamus enim, non pariatur quo debitis error in tempora, quia asperiores officia eos dolorem perferendis illo vel doloremque amet?</p>
+            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio et laborum, accusamus enim, non pariatur
+              quo debitis error in tempora, quia asperiores officia eos dolorem perferendis illo vel doloremque amet?
+            </p>
           </details>
         </div>
         <div class="game_landing__container__features__description">
@@ -111,7 +118,7 @@
             <summary>
               <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
             </summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta magnam reiciendis neque. Quisquam
+            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta magnam reiciendis neque. Quisquam
               placeat tempora illum autem,</p>
           </details>
         </div>
