Wrapped the p inside a div

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -27,12 +27,16 @@
     </form>
     <div class="game_landing__header__navigation__union">
       <ul class="game_landing__header__navigation__union__ul">
-        <li class="game_landing__header__navigation__union__ul__list"><a href="#"
-            class="game_landing__header__navigation__union__ul__list_link"><img src="./images/yellow-logo.svg" alt
-              class="game_landing__header__navigation__union__ul__list_image"></a></li>
-        <li class="game_landing__header__navigation__union__ul__list"><a href="#"
-            class="game_landing__header__navigation__union__ul__list_link"><img src="./images/union-logo.svg" alt
-              class="game_landing__header__navigation__union__ul__list_image"></a></li>
+        <li class="game_landing__header__navigation__union__ul__list">
+          <a href="#" class="game_landing__header__navigation__union__ul__list_link">
+            <img src="./images/yellow-logo.svg" alt class="game_landing__header__navigation__union__ul__list_image">
+          </a>
+        </li>
+        <li class="game_landing__header__navigation__union__ul__list">
+          <a href="#" class="game_landing__header__navigation__union__ul__list_link">
+            <img src="./images/union-logo.svg" alt class="game_landing__header__navigation__union__ul__list_image">
+          </a>
+        </li>
       </ul>
     </div>
     <nav class="game_landing__header__menu">
@@ -71,18 +75,23 @@
         <h2 class="game_landing__container__gallery__header__subtitle">What is SOS?</h2>
         <h4 class="game_landing__container__gallery__header__big_title">Social battle royale game</h4>
       </header>
-      <p class="game_landing__container__gallery__game_about">Each round, <b>you</b> and <b>15</b> other contnts compete
-        to
-        escape a deadly island filled with monsters. The trick is: <b>three</b> people can survive. Will you run solo or
-        form friendships with others to escape?</p>
-      <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference between
-        life an death</p>
+      <div class="game_landing__container__gallery_text_wrapper">
+        <p class="game_landing__container__gallery__game_about">Each round, <b>you</b> and <b>15</b> other contnts
+          compete
+          to
+          escape a deadly island filled with monsters. The trick is: <b>three</b> people can survive. Will you run solo
+          or
+          form friendships with others to escape?</p>
+        <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference
+          between
+          life an death</p>
+      </div>
       <ul class="game_landing__container__gallery__lists">
         <li class="game_landing__container__gallery__lists_1"><img class="game_landing__container__gallery__lists_image"
             src="./images/monument.png" alt>
         <li class="game_landing__container__gallery__lists_2"><img class="game_landing__container__gallery__lists_image"
             src="./images/monument-2.png" alt>
-        <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__list_image"
+        <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__lists_image"
             src="./images/monument-3.png" alt>
       </ul>
     </article>
@@ -108,7 +117,8 @@
             <summary>
               <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
             </summary>
-            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio et laborum, accusamus enim, non pariatur
+            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Odio et laborum, accusamus enim, non pariatur
               quo debitis error in tempora, quia asperiores officia eos dolorem perferendis illo vel doloremque amet?
             </p>
           </details>
@@ -118,7 +128,8 @@
             <summary>
               <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
             </summary>
-            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta magnam reiciendis neque. Quisquam
+            <p class="game_landing__container__features__description_text">Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Dolor dicta magnam reiciendis neque. Quisquam
               placeat tempora illum autem,</p>
           </details>
         </div>
